:sparkles: feat: implementando modal carrinho

--- a/index.html
+++ b/index.html
@@ -1,35 +1,145 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
 
-    <title>Cardapio</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link rel="stylesheet" href="./styles/output.css" />
-  </head>
+<head>
+  <meta charset="utf-8" />
 
-  <body>
-    <!-- HEADER -->
-    <header class="w-full h-[420px] bg-zinc-900 bg-home bg-cover bg-center">
-      <div class="w-full h-full flex flex-col justify-center items-center">
-        <img
-          src="./assets/hamb-1.png"
-          alt="Logo JSBurger"
-          class="w-32 h-32 rounded-full shadow-lg hover:scale-110 duration-300"
-        />
-        <h1 class="text-3xl mt-3 mb-2 font-bold text-white">JS - Burguer</h1>
-        <span class="text-white font-medium">Rua Principal, Centro, São José do Xingu-MT</span>
+  <title>Cardapio</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet"
+    type="text/css" />
+  <link rel="stylesheet" href="./styles/output.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
 
-        <div class="bg-green-500 px-3 py-2 rounded-lg mt-3">
-          <span class="text-gray-300">Atendimento: Seg. a Domin - 18:00 - 03:00</span>
+<body>
+  <!-- HEADER -->
+  <header class="w-full h-[420px] bg-zinc-900 bg-home bg-cover bg-center">
+    <div class="w-full h-full flex flex-col justify-center items-center">
+      <img src="./assets/hamb-1.png" alt="Logo JSBurger"
+        class="w-32 h-32 rounded-full shadow-lg hover:scale-110 duration-300" />
+      <h1 class="text-3xl mt-3 mb-2 font-bold text-white">JS - Burguer</h1>
+      <span class="text-white font-medium">Rua Principal, Centro, São José do Xingu-MT</span>
+
+      <div class="bg-green-500 px-3 py-2 rounded-lg mt-3">
+        <span class="text-gray-300">Atendimento: Seg. a Domin - 18:00 - 03:00</span>
+      </div>
+
+    </div>
+  </header>
+  <!-- FIM HEADER -->
+
+  <h2 class="text-2xl md:text-3xl font-bold text-center mt-4 mb-6">Conheça nossos produtos</h2>
+
+  <div id="menu">
+    <main class="grid grid-cols-1 gap-7 mx-auto max-w-7xl md:grid-cols-2">
+      <!-- PRODUTOS ITEM -->
+
+
+      <div class="flex gap-2 px-3">
+        <img src="./assets/hamb-1.png" alt="hambuguer Smash"
+          class="w-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
+
+        <div>
+          <p class="font-bold">Big JS Duplo</p>
+          <p class="text-sm">Quatro hambúrgueres (100% carne bovina), alface americana, queijo processado sabor cheddar,
+            molho especial,
+            cebola, picles e pão com gergelim.
+          </p>
+
+          <div class="flex items-baseline justify-between">
+
+            <p class="font-bold text-lg">R$28,55</p>
+            <button data-name="hambuguer-js-duplo" data-price="28.55"
+              class="bg-gray-900 px-5 py-2 rounded-md add-to-card-btn">
+              <i class="fa-solid fa-cart-plus text-lg text-green-400"></i>
+            </button>
+
+          </div>
         </div>
 
       </div>
-    </header>
-    <!-- HEADER -->
-  </body>
+
+      <div class="flex gap-2 px-3">
+        <img src="./assets/hamb-2.png" alt="hambuguer Smash"
+          class="w-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
+
+        <div>
+          <p class="font-bold">Big JS Bacon</p>
+          <p class="text-sm">Dois hambúrgueres (100% carne bovina), alface americana, queijo processado sabor cheddar,
+            molho especial, cebola, picles, bacon e pão com gergelim.
+          </p>
+
+          <div class="flex items-center justify-between">
+
+            <p class="font-bold text-lg">R$33,90</p>
+            <button class="bg-gray-900 px-5 py-2 rounded-md add-to-card-btn">
+              <i class="fa-solid fa-cart-plus text-lg text-green-400"></i>
+            </button>
+
+          </div>
+        </div>
+
+      </div>
+
+
+      <div class="flex gap-2 px-3">
+        <img src="./assets/hamb-3.png" alt="hambuguer Smash"
+          class="w-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
+
+        <div>
+          <p class="font-bold">Big JS</p>
+          <p class="text-sm">Dois hambúrgueres (100% carne bovina), alface americana, queijo processado sabor cheddar,
+            molho especial, cebola, picles e pão com gergelim.
+          </p>
+
+          <div class="flex items-baseline justify-between">
+
+            <p class="font-bold text-lg">R$24,55</p>
+            <button data-name="hambuguer-js-duplo" data-price="28.55"
+              class="bg-gray-900 px-5 py-2 rounded-md add-to-card-btn">
+              <i class="fa-solid fa-cart-plus text-lg text-green-400"></i>
+            </button>
+
+          </div>
+        </div>
+
+      </div>
+
+      <div class="flex gap-2 px-3">
+        <img src="./assets/hamb-4.png" alt="hambuguer Smash"
+          class="w-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300" />
+
+        <div>
+          <p class="font-bold">Duplo JS Quarteirão</p>
+          <p class="text-sm">Dois hambúrgueres (carne 100% bovina), mostarda, ketchup, cebola, queijo processado sabor
+            cheddar e pão com gergelim.
+          </p>
+
+          <div class="flex items-center justify-between">
+
+            <p class="font-bold text-lg">R$18,90</p>
+            <button class="bg-gray-900 px-5 py-2 rounded-md add-to-card-btn">
+              <i class="fa-solid fa-cart-plus text-lg text-green-400"></i>
+            </button>
+
+          </div>
+        </div>
+
+      </div>
+
+    </main>
+  </div>
+
+  <footer class="fixed bottom-0 w-full z-30">
+
+    <button class=" bg-green-600 py-2 w-full">
+      <span class="text-2xl">(<span id="card-count" class="text-2xl">2</span>) itens no carrinho</span>
+      <i class="fa-solid fa-cart-plus text-green-200 text-2xl"></i>
+    </button>
+
+  </footer>
+</body>
+
 </html>
